--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
       <script>
         // Initialize Firebase
-        var config = {
-          apiKey: "AIzaSyAfUvFuAu37GbcgSv9Tryx38hlhV6K21Xs",
-          authDomain: "twitch-livecoding.firebaseapp.com",
-          databaseURL: "https://twitch-livecoding.firebaseio.com",
-          projectId: "twitch-livecoding",
-          storageBucket: "twitch-livecoding.appspot.com",
-          messagingSenderId: "617446162555"
-        };
-        firebase.initializeApp(config);
+         var config = {
+            apiKey: "AIzaSyBhHQtskONKLeKIdZuaCygwSr09ImgQBac",
+            authDomain: "systemmonitor-2b015.firebaseapp.com",
+            databaseURL: "https://systemmonitor-2b015.firebaseio.com",
+            projectId: "systemmonitor-2b015",
+            storageBucket: "systemmonitor-2b015.appspot.com",
+            messagingSenderId: "153297484955"
+         };
+         firebase.initializeApp(config);
       </script>
       <script>
          const database = firebase.database().ref().child("system-info");
