--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
       <title>
          System Status
       </title>
-
+      <link rel="stylesheet" href="./style/style.css">
    </head>
    <body>
+      <img class="background" src="./assets/background.svg" alt="Cool background made with trianglify!">
       <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
       <script>
