--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 
       <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@0.7.0"></script>
+      <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-streaming@latest/dist/chartjs-plugin-streaming.min.js"></script>
       <script src="./scripts/main.js"></script>   
    </body>
 </html>
