Añadido gráfico temperatura y uso de memoria.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,19 @@
          </header>
          <section id="mainWrapper">
             <aside id="topProcess">
-               No hay datos disponibles
+               <h3>Top 10 procesos:</h5>
+               <ul id="listTopProcess">
+                  No hay datos disponibles
+               </ul>
             </aside>
-            <section id="cpuUsageCanvasWrapper">
-               <canvas id="cpuUsageCanvas" width="300px" height="250px"></canvas>
+            <section id="cpuUsageCanvasWrapper" class="usageCanvasWrapper">
+               <canvas id="cpuUsageCanvas" width="650px" height="250px"></canvas>
+            </section>
+            <section id="tempUsageCanvasWrapper" class="usageCanvasWrapper">
+               <canvas id="tempUsageCanvas" width="650px" height="250px"></canvas>
+            </section>
+            <section id="memoryUsageCanvasWrapper" class="usageCanvasWrapper">
+                  <canvas id="memoryUsageCanvas" width="250px" height="250px"></canvas>
             </section>
          </section>
 
