Pequeñas modificaciones, gráficos responsive.

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                </ul>
             </aside>
             <section id="cpuUsageCanvasWrapper" class="usageCanvasWrapper">
-               <canvas id="cpuUsageCanvas" width="650px" height="250px"></canvas>
+               <canvas id="cpuUsageCanvas" ></canvas>
             </section>
             <section id="tempUsageCanvasWrapper" class="usageCanvasWrapper">
-               <canvas id="tempUsageCanvas" width="650px" height="250px"></canvas>
+               <canvas id="tempUsageCanvas" ></canvas>
             </section>
             <section id="memoryUsageCanvasWrapper" class="usageCanvasWrapper">
-                  <canvas id="memoryUsageCanvas" width="250px" height="250px"></canvas>
+                  <canvas id="memoryUsageCanvas"></canvas>
             </section>
          </section>
 
